--- a/src/styles.css
+++ b/src/styles.css
@@ -51,9 +51,21 @@ button:hover
     border-radius: 5px;
     box-shadow: 0px 3px 7.5px #323942;
     padding: 10px;
-    min-width: 90px;
+    min-width: 70px;
     margin-top: 5px;
-    right: 0;
+}
+
+.dropbutton--content--row
+{
+    padding: 10px;
+    text-align: left;
+    border-radius: 5px;
+}
+
+.dropbutton--content--row:hover
+{
+    background-color: #58626f;
+    cursor: pointer;
 }
 
 .show
@@ -191,6 +203,15 @@ main
 {
     width: 15%;
     text-align: right;
+}
+
+.cryptocurrencies--page-selector
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 45px;
 }
 
 /**
