--- a/src/styles.css
+++ b/src/styles.css
@@ -172,8 +172,8 @@ main
 
 .cryptos--name--logo
 {
-    max-width: 20px;
-    max-height: 20px;
+    width: 20px;
+    height: 20px;
     margin-right: 5px;
 }
 
