--- a/src/styles.css
+++ b/src/styles.css
@@ -255,7 +255,7 @@ header
     margin-right: 2.5rem;
 }
 
-.header--navigation--container
+.header--navigation--container, .header--info-bar--stats-container
 {
     display: flex;
     margin-left: 0rem;
@@ -288,14 +288,19 @@ header
     border-bottom: 0.0625rem solid #323942;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
-.header--info-bar--stats-container
+.header--info-bar--button-container
 {
     display: flex;
-    margin-left: 0rem;
-    margin-right: auto;
+    align-items: center;
+}
+
+.header--info-bar--welcome-text
+{
+    margin-right: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .header--info-bar--stats
