--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@
  * 7. Currency Module
  * 8. Pagination Module
  * 9. Footer Module
- * 10. Toggle Styles
+ * 10. Toggle and Pseudo Class Styles
  */
 
 /************************************************************
@@ -108,11 +108,6 @@ html, body
     margin: 1rem;
 }
 
-.login-box--header-container--header:hover
-{
-    cursor: pointer;
-}
-
 .login-box--input-container
 {
     display: flex;
@@ -172,16 +167,6 @@ button
     min-width: 4.375rem;
 }
 
-button:hover
-{
-    cursor: pointer;
-}
-
-button:active
-{
-    background-color: #323942;
-}
-
 .header--info-bar--button
 {
     margin-left: 1rem;
@@ -210,12 +195,6 @@ button:active
     padding: 0.625rem;
     text-align: left;
     border-radius: 0.3125rem;
-}
-
-.dropbutton--content--row:hover
-{
-    background-color: #58626f;
-    cursor: pointer;
 }
 
 .header--selected
@@ -480,6 +459,7 @@ main
 .currency--data
 {
     display: flex;
+    border-bottom: 0.0625rem solid #323942;
 }
 
 .currency--data--basic
@@ -493,10 +473,66 @@ main
     padding: 0.625rem;
 }
 
-.currency--data--basic--line
+.currency--data--basic--title
 {
     display: flex;
     align-items: center;
+    margin-left: 0;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    padding: 0.3125rem;
+    font-size: 2.1rem;
+    font-weight: 400;
+}
+
+.currency--data--basic--right-line, .currency--data--basic--left-line
+{
+    display: flex;
+    align-items: center;
+    padding: 0.3125rem;
+    font-size: 0.75rem;
+}
+
+.currency--data--basic--left-line
+{
+    margin-left: 0;
+    margin-right: auto;
+}
+
+.currency--data--basic--right-line
+{
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.currency--data--basic--rank
+{
+    background-color: #282D35;
+    padding: 0.3125rem;
+    margin-right: 0.5rem;
+    border-radius: 0.3125rem;
+}
+
+.currency--data--basic--category, .currency--data--basic--symbol, .currency--data--basic--link
+{
+    background-color: #58626f;
+    margin-right: 0.5rem;
+    padding: 0.3125rem;
+    border-radius: 0.3125rem;
+}
+
+.currency--data--basic--tag
+{
+    background-color: #58626f;
+    margin-right: 0.5rem;
+    padding: 0.3125rem;
+    border-radius: 1.25rem;
+}
+
+.currency--data--basic--symbol
+{
+    font-size: 0.75rem;
+    font-weight: 300;
 }
 
 .currency--data--price
@@ -506,6 +542,21 @@ main
     align-items: center;
     justify-content: center;
     padding: 0.625rem;
+}
+
+.currency--data--price--value
+{
+    display: flex;
+    align-items: center;
+    padding: 0.3125rem;
+    font-size: 2.1rem;
+    font-weight: 400;
+}
+
+.currency--data--price--change
+{
+    padding: 0.3125rem;
+    border-radius: 0.3125rem;
 }
 
 /************************************************************
@@ -524,12 +575,6 @@ main
 {
     padding: 0.375rem;
     border-radius: 0.3125rem;
-}
-
-.pagination-item:hover
-{
-    background-color: #58626f;
-    cursor: pointer;
 }
 
 .pagination--selected
@@ -557,22 +602,48 @@ footer
 }
 
 /************************************************************
- * 10. Toggle Styles
+ * 10. Toggle and Pseudo Class Styles
  *
  *
  ************************************************************/
 
- .show
- {
-     display: block;
- }
- 
- .green
- {
-     color: green;
- }
- 
- .red
- {
-     color: red;
- }
+button:hover, .login-box--header-container--header:hover
+{
+    cursor: pointer;
+}
+
+button:active
+{
+    background-color: #323942;
+}
+
+.dropbutton--content--row:hover, .pagination-item:hover
+{
+    background-color: #58626f;
+    cursor: pointer;
+}
+
+.show
+{
+    display: block;
+}
+
+.green
+{
+    color: green;
+}
+
+.greenbg
+{
+    background-color: green;
+}
+
+.red
+{
+    color: red;
+}
+
+.redbg
+{
+    background-color: red;
+}
